# Rocket-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Rocket/: CMakeLists.txt
Rocket/include/: rke_macros.h  rke_pch.h
Rocket/include/Events/: event_macros.h
Rocket/src/Backends/Yaml/Util/: YamlConfigProxy.cpp  YamlConfigProxy.ixx
Rocket/src/Backends/glfw/ImGui/: glfwImGuiLayer.cpp
Rocket/src/Backends/glfw/Input/: glfwInput.cpp
Rocket/src/Backends/glfw/Rendering/: glfwContext.cpp  glfwContext.ixx
Rocket/src/Backends/glfw/Window/: glfwWindow.cpp  glfwWindow.ixx  glfwWindowLibrary.cpp  glfwWindowLibrary.ixx
Rocket/src/Backends/stb/: stb_truetype.cpp
Rocket/src/Platform/OpenGL/Rendering/: glRenderCommand.cpp  glRenderCommand.ixx
Rocket/src/Platform/OpenGL/Rendering/RenderingAPI/: glBuffers.cpp  glBuffers.ixx  glFrameBuffer.cpp  glFrameBuffer.ixx  glShader.cpp  glShader.ixx  glTexture.cpp  glTexture.ixx  glVertexArray.cpp  glVertexArray.ixx
Rocket/src/Platform/Windows/Core/: WindowsPlatformSupport.cpp
Rocket/src/Platform/Windows/Script/: WindowsScriptLoader.cpp
Rocket/src/Platform/Windows/Utils/: WindowsFileUtils.cpp
Rocket/src/Rocket/: rke.ixx
Rocket/src/Rocket/Assets/: AssetsManager.cpp  AssetsManager.ixx
Rocket/src/Rocket/Core/: Application.cpp  Application.ixx  DeltaTime.cpp  DeltaTime.ixx  HeapManager.ixx  Log.cpp  Log.ixx  Path.ixx  PlatformSupport.ixx  String.ixx  Types.ixx  UUID.cpp  UUID.ixx
Rocket/src/Rocket/Debug/: Instrumentor.cpp  Instrumentor.ixx
Rocket/src/Rocket/Editor/: PanelRegistry.cpp  PanelRegistry.ixx  PanelSwitches.cpp  PanelSwitches.ixx
Rocket/src/Rocket/Events/: Event.ixx  EventDispatcher.ixx  Event_Appication.ixx  Event_Base.ixx  Event_Key.ixx  Event_Mouse.ixx
Rocket/src/Rocket/ImGui/: ImGuiLayer.ixx  Modal.ixx  Panel.ixx  Style.ixx
Rocket/src/Rocket/Input/: Input.ixx  Keys.ixx  MouseButtons.ixx
Rocket/src/Rocket/Layer/: Layer.cpp  Layer.ixx  LayerStack.cpp  LayerStack.ixx
Rocket/src/Rocket/Physics/: PhysicsLayers.cpp  PhysicsLayers.ixx
Rocket/src/Rocket/Physics/Physics2D/: Gravity2D.ixx  PhysicsEngine2D.cpp  PhysicsEngine2D.ixx
Rocket/src/Rocket/Project/: Project.cpp  Project.ixx
Rocket/src/Rocket/Rendering/: BindingPoint.ixx  Context.cpp  Context.ixx  Context_Base.ixx  RenderCommand.cpp  RenderCommand.ixx  RenderCommand_Base.ixx  RendererAPI.cpp  RendererAPI.ixx
Rocket/src/Rocket/Rendering/PostProcessing/: PostProcessor.cpp  PostProcessor.ixx
Rocket/src/Rocket/Rendering/PostProcessing/Effects/: PostProcessEffect.ixx  ToneMapping.cpp  ToneMapping.ixx
Rocket/src/Rocket/Rendering/Rendering2D/: Renderer2D.cpp  Renderer2D.ixx
Rocket/src/Rocket/Rendering/Rendering3D/: Renderer.cpp  Renderer.ixx
Rocket/src/Rocket/Rendering/RenderingAPI/: Buffers.cpp  Buffers.ixx  Buffers_Base.ixx  Camera.ixx  Font.cpp  Font.ixx  FrameBuffer.cpp  FrameBuffer.ixx  FrameBuffer_Base.ixx  Shader.cpp  Shader.ixx  Shader_Base.ixx  Texture.cpp  Texture.ixx  Texture_Base.ixx  VertexArray.cpp  VertexArray.ixx  VertexArray_Base.ixx
Rocket/src/Rocket/Scene/: ComponentRegistry.ixx  Components.ixx  Scene.cpp  Scene.ixx  SceneCamera.cpp  SceneCamera.ixx  SceneRenderer.cpp  SceneRenderer.ixx  SceneSerializer.cpp  SceneSerializer.ixx
Rocket/src/Rocket/Script/: Script.ixx  ScriptEngine.cpp  ScriptEngine.ixx  ScriptLoader.ixx  ScriptRegistry.cpp  ScriptRegistry.ixx
Rocket/src/Rocket/Utils/: ConfigProxy.cpp  ConfigProxy.ixx  ConfigProxy_Base.ixx  FileUtils.cpp  FileUtils.ixx  MathUtils.cpp  MathUtils.ixx  Random.cpp  Random.ixx
Rocket/src/Rocket/Window/: NativeWindow.ixx  Window.cpp  Window.ixx  WindowLibrary.cpp  WindowLibrary.ixx  WindowLibrary_Base.ixx  Window_Base.ixx
RocketGlue/: CMakeLists.txt
RocketGlue/include/: rke_glue.h
RocketGlue/src/: ScriptCache.cpp
RocketLauncher/: CMakeLists.txt
RocketLauncher/src/: RocketLauncher.cpp
RocketLauncher/src/Editor/: EditorCamera.cpp  EditorCamera.ixx  EditorLayer.cpp  EditorLayer.ixx
RocketLauncher/src/ImGui/: DockSpace.cpp  DockSpace.ixx  Gizmo.cpp  Gizmo.ixx
RocketLauncher/src/ImGui/Layout/: Layout.cpp  Layout.ixx
RocketLauncher/src/ImGui/Modals/: ProjectCreatingModal.cpp  ProjectCreatingModal.ixx
RocketLauncher/src/ImGui/Panels/: ApplicationPanel.ixx  ContentBrowserPanel.cpp  ContentBrowserPanel.ixx  EditorSettingPanel.cpp  EditorSettingPanel.ixx  ProjectSettingPanel.cpp  ProjectSettingPanel.ixx  SceneHierarchyPanel.cpp  SceneHierarchyPanel.ixx  Toolbar.cpp  Toolbar.ixx  Viewport.cpp  Viewport.ixx  WindowSettingPanel.ixx
RocketLauncher/src/Rendering/PostProcessing/: FXAAEffect.cpp  FXAAEffect.ixx  OutlineEffect.cpp  OutlineEffect.ixx
assets/: RocketSDK.cmake
assets/proj-templates/: .editorconfig.txt  CMakeLists.txt.txt  CMakePresets.json.txt  MyScript.ixx.txt
assets/shaders/: composite.rkshdr  fxaa.rkshdr  renderer2D.rkshdr  tone_mapping.rkshdr
assets/shaders/include/: binding_points.glsl
assets/shaders/src/: composite.frag  fullscreen.vert  fxaa.frag  renderer2D.frag  renderer2D.vert  tone_mapping.frag
editor/config/: .style
